# Micah

./: .gitmodules  CMakeLists.txt  Makefile  Micah.cpp  README.md  eval.cpp  eval.h  eval_par.cpp  eval_par.h  mpi.hosts  mpi.sh  psq.cpp  search.cpp  search.h  syzygy.cpp  syzygy.h  tt.cpp  tt.h  utils.cpp  utils.h  wrapper.sh
